--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -1,4 +1,4 @@
-.grid {
+.container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 15px;
@@ -7,4 +7,6 @@
 
 .image {
   margin-top: 30px;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
