--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -1,12 +1,17 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 15px;
-  margin: 5px;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+  position: relative;
+  margin: 20px;
 }
 
 .image {
-  margin-top: 30px;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: transform 0.3s ease;
+}
+
+.image:hover {
+  transform: scale(1.05);
 }
