--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -6,6 +6,16 @@
   margin: 20px;
 }
 
+@media (max-width: 480px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    position: relative;
+    margin: 20px;
+  }
+}
+
 .image {
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
