--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -6,16 +6,6 @@
   margin: 20px;
 }
 
-@media (max-width: 480px) {
-  .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-    position: relative;
-    margin: 20px;
-  }
-}
-
 .image {
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -24,4 +14,14 @@
 
 .image:hover {
   transform: scale(1.05);
+}
+
+@media (max-width: 480px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(40px, 1fr));
+    gap: 10px;
+    position: relative;
+    margin: 20px;
+  }
 }
