--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -33,3 +33,18 @@
 .li {
   margin: 0px 30px;
 }
+
+@media (max-width: 480px) {
+  .header {
+    color: #fff;
+    padding: 1px 0px 1px 0px;
+    text-align: center;
+    font-family: cursive;
+    font-size: 15px;
+    border-radius: 10px;
+  }
+
+  .li {
+    margin: 0px 10px;
+  }
+}
