--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -7,6 +7,8 @@
 }
 
 .image {
+  width: 100%;
+  height: auto;
   border-radius: 3px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: transform 0.5s ease;
