--- a/components/reusable/modal.module.css
+++ b/components/reusable/modal.module.css
@@ -15,7 +15,7 @@
 
 .modalBox {
   background-color: rgba(0, 0, 0, 0.3);
-  padding: 16px;
+  padding: 20px;
 }
 
 .modalHeader {
@@ -32,15 +32,14 @@
 }
 
 .closeButton {
-  padding: 4px;
   border-radius: 9999px;
-  font-size: 16px;
+  padding: 2px;
   font-weight: bold;
   color: white;
   transition: all 0.3s ease;
   border: none;
   cursor: pointer;
-  margin-bottom: 5px;
+  margin-right: -15px;
 }
 
 .closeButton:hover {
@@ -55,7 +54,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  color: white;
+  color: #ffffff91;
   padding: 24px 16px;
   font-size: 32px;
   border: none;
