--- a/components/reusable/modal.module.css
+++ b/components/reusable/modal.module.css
@@ -26,6 +26,8 @@
   width: 80%;
   height: 100%;
   overflow: hidden;
+  max-width: 600px;
+  max-height: 600px;
 }
 
 .closeButton {
@@ -40,6 +42,7 @@
   position: absolute;
   top: 10px;
   right: 20px;
+  z-index: 100;
 }
 
 .closeButton:hover {
@@ -100,6 +103,11 @@
     width: 100%;
     padding: 10px;
   }
+
+  .closeButton {
+    top: 10px;
+    right: 10px;
+  }
 }
 
 @media (max-width: 480px) {
@@ -111,5 +119,10 @@
   .navButton {
     font-size: 20px;
     padding: 12px;
+  }
+
+  .closeButton {
+    font-size: 20px;
+    padding: 8px;
   }
 }
