--- a/components/reusable/modal.module.css
+++ b/components/reusable/modal.module.css
@@ -26,8 +26,8 @@
   width: 80%;
   height: 100%;
   overflow: hidden;
-  max-width: 600px;
-  max-height: 600px;
+  /* max-width: 600px;
+  max-height: 600px; */
 }
 
 .closeButton {
