--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -18,6 +18,10 @@
   transform: scale(1.05);
 }
 
+.loading {
+  text-align: center;
+}
+
 @media (max-width: 480px) {
   .container {
     display: grid;
