--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
 
-body {
-  background-color: white;
-  color: black;
-  font-family: "Poppins", sans-serif;
+@media (prefers-color-scheme: light) {
+  :root {
+    --text: black;
+    --background: white;
+    --border-gradient-light: linear-gradient(
+      to right,
+      rgba(253, 79, 29, 1),
+      rgba(252, 212, 69, 1) 100%
+    );
+    --border-gradient: var(--border-gradient-light);
+    --link-color: gold;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text: white;
+    --background: #121212;
+    --border-gradient-dark: linear-gradient(
+      to right,
+      rgba(153, 48, 18, 1),
+      rgba(127, 106, 35, 1) 100%
+    );
+    --border-gradient: var(--border-gradient-dark);
+    --link-color: goldenrod;
+  }
+}
+
+:root {
+  --text: black;
+  --background: white;
+  --border-gradient: var(--border-gradient-light);
+  --link-color: gold;
 }
 
 body.dark {
-  background-color: #121212;
-  color: white;
+  --text: white;
+  --background: #121212;
+  --border-gradient: var(--border-gradient-dark);
+  --link-color: goldenrod;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  color: var(--text);
+  background-color: var(--background);
 }
 
 .no-scroll {
