--- a/components/grid/gridImage.module.css
+++ b/components/grid/gridImage.module.css
@@ -22,6 +22,13 @@
   text-align: center;
 }
 
+.error {
+  color: red;
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+}
+
 @media (max-width: 480px) {
   .container {
     display: grid;
